<resources>
    <string name="app_name">SSA</string>
    <string name="main_page_sign_in_button">Log in</string>
    <string name="main_page_sign_up_button">Register</string>
    <string name="sign_in_page_title_text_view">Sign in </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_page_remember_me_check_box">Remember me</string>
    <string name="forget_password">Forgot password</string>
    <string name="register">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">Name </string>
    <string name="donor_age">Age</string>
    <string name="phone">Phone</string>
    <string name="donor_location">Location</string>
    <string name="conditions">All Condition reserved</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_API_key">AIzaSyDFOoZdxtf8C-GNAgi1oUINfsx1yUanCbQ</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_">Home</string>
</resources>
