<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.Authentication.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="125dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/logoshop"
                android:layout_gravity="center"/>


            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/sign_up_email"

                android:layout_margin="6dp"
                />

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:id="@+id/sign_up_name"
                android:layout_margin="6dp"
                />

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/sign_up_password"
                android:inputType="textPassword"
                android:layout_margin="6dp"
                />

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm password"
                android:id="@+id/sign_up_confirm_password"
                android:inputType="textPassword"
                android:layout_margin="6dp"
                />



            <android.support.v7.widget.AppCompatButton
                android:id="@+id/SelectBirthDayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_margin="6dp"
                android:layout_marginTop="10dp"
                app:backgroundTint="#ebca0707"
                android:text="Select Birthday"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_margin="6dp"
                android:text="Gender"
                android:padding="6dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp">

                    <RadioButton
                        android:id="@+id/male_radio"
                        android:layout_width="wrap_content"
                        android:checked="true"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textSize="15sp"
                        android:text="Male"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="Female"/>
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_margin="6dp"
                android:text="Nature of Person"
                android:padding="6dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_margin="10dp"
                android:orientation="vertical">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:id="@+id/radioGroup"
                    android:layout_height="wrap_content">


                        <RadioButton
                            android:id="@+id/hyper_active_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:layout_marginRight="5dp"
                            android:textSize="15sp"
                            android:text="Hyper Active"/>

                        <RadioButton
                            android:id="@+id/active_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="Active"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="Calm"/>
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/sign_up_donation_regiter"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="SignUpAction"
                android:background="@drawable/my_button_bg"
                android:text="@string/register"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>